src/np222kk/dv507/a2/test/cases/negative/test_methodarray_02.ofp
void main() {

    float f = method()[0];
}

float method() {
    return 1.0;
}